--- a/assignment_2/css/style.css
+++ b/assignment_2/css/style.css
@@ -489,7 +489,7 @@ h2 {
   color: #f58a07;
 }
 .navbar-heading {
-  position: fixed;
+  /* position: fixed; */
   background-color: white;
 }
 .home-content-one img {
